--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
             <aside class="col-12 col-sm-4 col-md-3 col-lg-2 p-0 flex-shrink-1 bg-primary">
                 <nav
                     class="navbar navbar-expand-sm navbar-dark bg-primary align-items-start flex-sm-column flex-row sticky-top">
-                    <a class="navbar-brand p-0 m-0 align-self-center wow animate__fadeInDown " href="#">
+                    <a class="navbar-brand p-0 m-0 align-self-center wow animate__fadeInDown " href="./">
                         <img class="brand-logo" src="img/logo.png" alt="">
                     </a>
                     <a href class="navbar-toggler my-auto" data-toggle="collapse" data-target=".sidebar">
@@ -40,8 +40,8 @@
                     </a>
                     <div class="collapse navbar-collapse sidebar w-100 h-100 align-items-start">
                         <ul class="flex-column navbar-nav w-100 wow animate__fadeInLeft animate__fast">
-                            <li class="nav-item wow animate__fadeInLeft animate__fast">
-                                <a class="nav-link pl-0" href="#"><i class="fa fa-home fa-fw"></i> <span
+                            <li class="nav-item active wow animate__fadeInLeft animate__fast">
+                                <a class="nav-link pl-0" href="./"><i class="fa fa-home fa-fw"></i> <span
                                         class="">HOME</span></a>
                             </li>
                             <li class="nav-item wow animate__fadeInLeft animate__fast animate__delay-1s">
@@ -57,19 +57,19 @@
                                 </div>
                             </li>
                             <li class="nav-item wow animate__fadeInLeft animate__fast animate__delay-2s">
-                                <a class="nav-link pl-0" href="#"><i class="fa fa-user-ninja fa-fw"></i> <span
-                                        class="">QUIENES SOMOS</span></a>
+                                <a class="nav-link pl-0" href="./about-us.html"><i class="fa fa-user-ninja fa-fw"></i>
+                                    <span class="">QUIENES SOMOS</span></a>
                             </li>
                             <li class="nav-item wow animate__fadeInLeft animate__fast animate__delay-3s">
-                                <a class="nav-link pl-0" href="#"><i class="fa fa-address-book fa-fw"></i> <span
-                                        class="">CONTACTO</span></a>
+                                <a class="nav-link pl-0" href="./contact.html"><i class="fa fa-address-book fa-fw"></i>
+                                    <span class="">CONTACTO</span></a>
                             </li>
                         </ul>
                     </div>
                     <div class=" w-100" id="social-nav">
                         <ul class="p-0 m-0">
                             <li class="my-3 wow animate__fadeInLeft animate__fast animate__delay-2s">
-                                <a href="./contact" class="btn btn-block btn-success">LINK CONTACTO</a>
+                                <a href="./contact.html" class="btn btn-block btn-success">LINK CONTACTO</a>
                             </li>
                             <li class="my-3 wow animate__fadeInLeft animate__fast animate__delay-3s">
                                 <a href="mailto:info@switchit.com.ar" class="btn btn-block btn-success">LINK EMAIL</a>
@@ -122,8 +122,8 @@
                     </div>
                 </section>
                 <section class="container my-5 wow animate__fadeInRight animate__delay-2s animate__slow">
-                    <h5>Template de SwitchIT</h5>
-                    <h1 class="">Bienvenidos!</h1>
+                    <h5 class="subtitle">Template de SwitchIT</h5>
+                    <h1 class="title">Bienvenidos!</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae necessitatibus dolore culpa
                         illo rerum optio animi modi dolores rem nulla fugit, aspernatur ratione iste facere deleniti
                         iure provident cumque quidem reprehenderit! Neque, enim numquam maxime laborum quae eius,
@@ -153,8 +153,8 @@
                 </section>
                 <section class="container my-5">
                     <div class="row">
-                        <div class="col-md-7 wow animate__fadeInLeft animate__delay-4s">
-                            <h2>Información sobre nosotros!</h2>
+                        <div class="col-md-7 wow animate__fadeInLeft animate__delay-2s">
+                            <h3 class="title">Información sobre nosotros!</h3>
                             <p>
                                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit molestiae alias repellat
                                 vero dolor expedita aspernatur nobis similique temporibus eligendi! Aut molestias, eos
@@ -168,7 +168,7 @@
                                 tempora reprehenderit ipsam quod explicabo velit pariatur eligendi error veritatis
                                 voluptates, doloribus accusamus ducimus voluptas totam debitis dicta.
                             </p>
-                            <a class="btn btn-outline-success btn-lg" href="./contact">Contacto</a>
+                            <a class="btn btn-outline-success btn-lg" href="./contact.html">Contacto</a>
                         </div>
                         <div class="col-md-5 pl-4 wow animate__fadeIn animate__delay-5s animate__slow">
                             <img class="img-fluid img-side" src="img/home/right.jpg" alt="imagen empresa derecha" />
@@ -183,11 +183,11 @@
                 </section>
                 <section class="container my-5">
                     <div class="row">
-                        <div class="col-sm-12 col-md-5 pr-4">
+                        <div class="col-sm-12 col-md-5 pr-4 wow animate__fadeIn animate__delay-3s animate__slow">
                             <img class="img-fluid img-side" src="img/home/left.jpg" alt="imagen empresa derecha" />
                         </div>
-                        <div class="col-sm-12 col-md-7 wow animate__fadeInRight animate__delay-4s">
-                            <h2>Servicios y extras! ♪♫</h2>
+                        <div class="col-sm-12 col-md-7 wow animate__fadeInLeft animate__delay-2s">
+                            <h3 class="title">Servicios y extras! ♪♫</h3>
                             <p>
                                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit molestiae alias
                                 repellat vero dolor expedita aspernatur.
@@ -238,7 +238,7 @@
                         <img class="align-self-center img-fluid mini-logo" src="img/logo.png" alt="">
                     </div>
                 </section>
-                <footer class="bg-primary text-white">
+                <footer class="bg-primary text-white border-success">
                     <div class="row m-0">
                         <div class="col col-md-8 p-0">
                             <ul class="text-center h-100 m-0 p-4 d-flex flex-column justify-content-center">
@@ -250,10 +250,10 @@
                                     <a href="#">Links de contacto</a>
                                 </li>
                                 <li>
-                                    <a href="#">Home</a> |
-                                    <a href="#">Productos</a> |
-                                    <a href="#">Quienes Somos</a> |
-                                    <a href="#">Contacto</a>
+                                    <a href="./">Home</a> |
+                                    <a href="./products.html">Productos</a> |
+                                    <a href="./about-us.html">Quienes Somos</a> |
+                                    <a href="./contact.html">Contacto</a>
                                 </li>
                                 <li class="mt-5">
                                     <a href="https://www.switchit.com.ar/">Switchit Template - 2020</a>
